[package]
name = "mutation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
anyhow = "1.0.38"

move-model = { path = "../../../move-model" }
bytecode = {path = "../../bytecode"}
move-prover = { path = "../.." }
move-lang = { path = "../../../move-lang" }